Fixed z-index.

--- a/j-Cookie2/component.css
+++ b/j-Cookie2/component.css
@@ -1,6 +1,6 @@
 .hidden { display: none; }
 
-.ui-cookie2 { position: fixed; right: 40px; bottom: 40px; max-width: 320px; background-color: #133762; color: white; padding: 20px; box-shadow: 0 5px 10px rgba(0,0,0,0.2); font-size: 14px; line-height: 18px; border-radius: 3px; }
+.ui-cookie2 { position: fixed; right: 40px; bottom: 40px; max-width: 320px; background-color: #133762; color: white; padding: 20px; box-shadow: 0 5px 10px rgba(0,0,0,0.2); font-size: 14px; line-height: 18px; border-radius: 3px; z-index: 100; }
 .ui-cookie2 a { color: white; font-weight: bold; }
 .ui-cookie2-buttons { margin-top: 20px; }
 .ui-cookie2-icon { text-align: center; font-size: 40px; margin-bottom: 20px; }
